Remove --strict flag from pip-audit step
Update CI workflow to invoke pip-audit without the --strict option. This change keeps --desc and --skip-editable but prevents pip-audit from causing a strict (non-zero) failure, allowing the job to report vulnerabilities without failing the build immediately.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Run pip-audit (dependency vulnerability scan)
         run: |
-          pip-audit --strict --desc --skip-editable
+          pip-audit --desc --skip-editable
 
       - name: Run Ruff linter
         run: |
